<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EtherSurface</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scale">Scale</string>
    <string name="about">About</string>
    <string name="size">Size</string>
    <string name="key">Key</string>
    <string name="octave">Octave</string>
    <string name="sounds">Sound</string>
    <string name="size_4">4</string>
    <string name="size_5">5</string>
    <string name="size_6">6</string>
    <string name="size_7">7</string>
    <string name="size_8">8</string>
    <string name="size_9">9</string>
    <string name="size_10">10</string>
    <string name="size_11">11</string>
    <string name="size_12">12</string>
	<string name="size_13">13</string>
	<string name="size_14">14</string>
	
    <string name="key_C">C</string>
    <string name="key_Cs">C#</string>
    <string name="key_D">D</string>
    <string name="key_Ds">D#</string>
    <string name="key_E">E</string>
    <string name="key_F">F</string>
    <string name="key_Fs">F#</string>
    <string name="key_G">G</string>
    <string name="key_Gs">G#</string>
    <string name="key_A">A</string>
    <string name="key_As">A#</string>
    <string name="key_B">B</string>
    
    <string name="octave_zero">0</string>
    <string name="octave_neg_one">-1</string>
    <string name="octave_neg_two">-2</string>
    <string name="octave_two">2</string>
    <string name="octave_one">1</string>
    
    <string name="scale_maj">Major</string>
    <string name="scale_min">Minor</string>
    <string name="scale_pent">Pentatonic</string>
    <string name="scale_chrom">Chromatic</string>
	<string name="scale_flam">Flamenco</string>
    <string name="scale_whole">Whole-Tone</string>
	<string name="scale_blues">Blues</string>
	<string name="scale_oct">Octatonic</string>
    <string name="scale_bp">Bohlen-Pierce</string>
    <string name="scale_ot_low">Overtone Series Low</string>
    <string name="scale_ot_high">Overtone Series High</string>
    
	
    <string name="scale_def">Default</string>
    <string name="title_activity_about">AboutActivity</string>
	<string name="bgcolor">#3b444b</string>

	<string name="sound_1">Ether Pad</string>
	<string name="sound_2">Distorted Dreams</string>
	<string name="sound_3">Xanpalamin</string>
	<string name="giveitatri">Give it a Tri</string>
	<string name="digitalmonk">Digital Monk</string>	
</resources>
